fixes build warnings and adds used table row count